# brainstormer

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  angles.md  hooks.md  manifest.json  outlines.md  paladin.config.json  pyproject.toml  rules.md  ruleset.md
.github/workflows/: ci.yml  pages.yml  release.yml
agents/: AGENT-FORMAT.md  AUDIT-PLAN.md  registry.md
agents/_staging/: .net-framework.md  .net.md  _manifest.txt  accessibility.md  account-strategist.md  accounts-payable.md  ad-security.md  agent-organizer.md  ai-assistant.md  ai-citation-strategist.md  ai-engineer.md  airflow.md  analytics-reporter.md  android.md  angular.md  ansible.md  anthropologist.md  api-documentation.md  app-store-optimizer.md  architecture-patterns.md  asp.net-core.md  astro.md  auth-patterns.md  automation-governance.md  aws-messaging.md  azure.md  baidu-seo.md  bash.md  bats.md  bazel.md  bilibili.md  (+343 more)
brainstormer/: LAUNCH-TASKS.html  angles.md  briefs.md  calendar.md  next-session-prompt.md  roadmap.md  ruleset.md  session-summary-2026-03-24.md
cli/: __init__.py  audit_agents.py  brainstormer.py  init.bat  init.sh
docs/: getting-started.md  troubleshooting.md
ideation/: SKILL.md  chain-steps.md
obsidian/: config.example.yaml
quality/: CODEGLASS_INSTALL.md  SKILL.md  action.yml
scripts/: agents_ai_arch.py  agents_backend.py  agents_business.py  agents_data.py  agents_design_docs.py  agents_devops.py  agents_languages.py  agents_meta_niche.py  agents_mobile_game.py  agents_python.py  agents_security_testing_sre.py  assemble_agents.py  rewrite_agents.py
site/: index.html
(+45 files in other folders)
